-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.1, 5.7.0
-
None
-
This is on Windows 10, 64-bit, Qt Downloaded from website.
-
107ac187bcc3c552217181a3b247ed5f31a9cb49
Running the following code outputs "true" four times (meaning all operations are successful) and then crashes in the QOpenGLDebugLogger destructor:
#include <QApplication> #include <QDebug> #include <QOffscreenSurface> #include <QOpenGLContext> #include <QOpenGLDebugLogger> int main(int argc, char **argv) { // Start application QApplication application{argc, argv}; QSurfaceFormat format; format.setOption(QSurfaceFormat::DebugContext); QOffscreenSurface surface; surface.setFormat(format); surface.create(); qDebug() << surface.isValid(); QOpenGLContext context; context.setFormat(format); qDebug() << context.create(); qDebug() << context.isValid(); context.makeCurrent(&surface); QOpenGLDebugLogger logger; qDebug() << logger.initialize(); logger.startLogging(QOpenGLDebugLogger::SynchronousLogging); context.doneCurrent(); return 0; }
| For Gerrit Dashboard: QTBUG-54799 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 165593,2 | QOpenGLDebugLogger: do not crash if deleted with the wrong GL context current | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |